# voice-agents

./: .dockerignore  .env.example  .gitignore  LICENSE  Nexus_Overview.pptx  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/: README.md
.github/workflows/: ci-cd.yml  ci.yml
config/: agents.yaml
config/environment/: .env.example
config/evaluation/: benchmarks.json
data/knowledge_base/: acme_support.md
deploy/docker/: Caddyfile  Dockerfile  docker-compose.yml  gunicorn.conf.py  init-db.sh
docs/: ops-caddy-security-headers.md
docs/integrations/: crm-setup.md  slack-setup.md  twilio-setup.md
docs/integrations/templates/: n8n-workflow.json  zapier-setup.md
docs/technical/: ARCHITECTURE.md  generate-pdf.sh  index.html
integrations/templates/: n8n-workflow.json  zapier-setup.md
project/: .gitignore  COPYRIGHT  LICENSE  README.md  SECURITY.md  bandit.yaml  pyproject.toml
project/deploy/docker/: Caddyfile  Dockerfile  docker-compose.yml
project/docs/: ha-multi-region.md  ops-dr-runbook.md  ops-load-testing.md  ops-monitoring.md  ops-oidc-auth0.md  ops-vm-recovery.md  saas-hosted.md  soc2-readiness.md
project/docs/soc2/: access-controls.md  key-rotation.md
project/exports/: Nexus_LinkedIn_Launch.pptx  Nexus_Overview.pptx  Nexus_Production_Deep_Dive.pptx
project/scripts/: build_linkedin_ppt.py  build_production_ppt.py  capture_mode_screenshots.py  generate_ppt.py  recover-production.sh  restore-drill.sh
project/scripts/loadtest/: k6-smoke.js
project/src/: config.py  database.py  main.py  middleware.py  observability.py  tasks.py
project/src/api/: auth_routes.py  cx_routes.py  deps.py  integration_routes.py  oidc_routes.py  ops_routes.py  telephony_routes.py
project/src/db/: sql_helpers.py
project/src/feedback/: engine.py
project/src/integrations/: __init__.py  adp.py  aircall.py  amplitude.py  asana.py  azure_devops.py  bamboohr.py  bigquery.py  catalog.py  clickup.py  confluence.py  copper.py  creatio.py  dialpad.py  document360.py  dynamics365.py  eight_by_eight.py  epic.py  five9.py  freshdesk.py  front.py  genesys.py  github.py  guru.py  gusto.py  help_scout.py  intercom.py  klaviyo.py  linear.py  mailchimp.py  marketo.py  meta_messaging.py  monday.py  nice.py  notion.py  pagerduty.py  pipedrive.py  powerbi.py  ringcentral.py  salesforce.py  (+16 more)
project/src/saas/: plan_gates.py  provisioning.py
project/src/security/: soql.py
project/src/telephony/: twiml_parser.py
project/static/: contact.html  faq.html  index.html  integrations.html  landing.css  landing.html  landing.js  plan-cards.js  pricing.html  signup.html
project/tests/: test_api_endpoints.py  test_landing_static.py
scripts/: backup.sh  ci.sh  demo.py  demo_chat.py  generate_ppt.py  ingest_kb.py  run.sh  run_evaluation.py  run_full_test_suite.sh
src/: __init__.py  analytics.py  auth.py  cache.py  config.py  database.py  logging_config.py  main.py  middleware.py  observability.py  tasks.py
src/agents/: tools.py
src/api/: auth_routes.py  chat_routes.py  deps.py  integration_routes.py  kb_routes.py  ops_routes.py  routes.py
src/evaluation/: evaluator.py
src/feedback/: __init__.py  engine.py
src/integrations/: crm.py  salesforce.py  servicenow.py  slack.py  webhooks.py  whatsapp.py  zendesk.py
src/llm/: factory.py  guardrails.py  hallucination.py  params.py
src/prompts/: templates.py
src/rag/: ingestion.py  keyword_search.py  retriever.py  vector_store.py
src/telephony/: __init__.py  amazon_connect_handler.py  call_router.py  ccaas_base.py  twilio_handler.py  twiml_parser.py
src/workflows/: orchestrator.py
static/: index.html
tests/: test_api_endpoints.py  test_comprehensive_e2e.py  test_integrations_clients.py  test_llm_features.py  test_orchestrator.py  test_platform.py  test_secrets_vault.py
tests/e2e/: conftest.py  test_non_functional.py  test_user_journey.py
tests/evaluation/: benchmarks.json  test_cases.json
tests/reports/: TEST_REPORT.md
