[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-voice-agents"
version = "1.0.0"
description = "Production-grade enterprise AI agent platform for voice, chat, and copilot operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shubham RSY" }]
keywords = ["voice-agents", "langchain", "fastapi", "rag", "telephony", "twilio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.8.0",
    "twilio>=9.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "cryptography>=43.0.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ShubhamRSY/voice-agents"
Repository = "https://github.com/ShubhamRSY/voice-agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end user journey tests",
    "nfr: non-functional tests (performance, security, concurrency)",
]
