[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-voice-agents"
version = "2.5.0"
description = "Production-grade enterprise AI agent platform for voice, chat, and copilot operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Shubham RSY" }]
keywords = ["voice-agents", "langchain", "fastapi", "rag", "telephony", "twilio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.137.1",
    "uvicorn[standard]==0.49.0",
    "gunicorn==26.0.0",
    "python-multipart==0.0.32",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "langchain==1.3.9",
    "langchain-openai==1.3.2",
    "langchain-anthropic==1.4.6",
    "langchain-community==0.4.2",
    "langchain-chroma==1.1.0",
    "langgraph==1.2.5",
    "chromadb==1.5.9",
    "pysqlite3-binary==0.5.4",
    "tiktoken==0.13.0",
    "twilio==9.10.9",
    "httpx==0.28.1",
    "aiohttp==3.14.1",
    "pyyaml==6.0.3",
    "structlog==26.1.0",
    "tenacity==9.1.4",
    "cryptography==49.0.0",
    "pyjwt==2.13.0",
    "redis==8.0.1",
    "websockets==15.0.1",
    "prometheus-client==0.25.0",
    "celery==5.6.3",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==25.1.0",
    # Production infrastructure
    "psycopg2-binary==2.9.10",
    "sentry-sdk==2.25.1",
    "hvac==2.3.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
    "Authlib==1.7.2",
    "email-validator==2.2.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "pytest-rerunfailures==16.3",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-defusedxml>=0.7.0",
]
demo = [
    "python-pptx>=1.0.0",
    "img2pdf>=0.5.0",
    "playwright>=1.49.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/ShubhamRSY/voice-agents"
Repository = "https://github.com/ShubhamRSY/voice-agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
data_file = "reports/coverage/.coverage"
branch = true

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
show_error_codes = true

# Suppress noisy false positives from third-party stubs
disable_error_code = [
    "var-annotated",     # ~35 instances: `conn` vars in contextmanager (mypy can't infer)
]

# Allow untyped decorators and bare Except
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "src.llm.factory",
    "src.rag.vector_store",
    "src.integrations.slack",
]
# LangChain/chromadb stubs have kwarg mismatches with actual runtime APIs
disable_error_code = ["arg-type", "call-arg"]

[[tool.mypy.overrides]]
module = [
    "src.auth",
]
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.tasks",
    "src.api.ops_routes",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.telephony.twilio_handler",
    "src.telephony.amazon_connect_handler",
    "src.telephony.security",
]
disable_error_code = ["arg-type", "union-attr", "import-untyped"]

[[tool.mypy.overrides]]
module = [
    "src.evaluation.evaluator",
]
disable_error_code = ["assignment", "misc"]

[[tool.mypy.overrides]]
module = [
    "src.rag.keyword_search",
]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = [
    "src.config",
]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "src.api.oidc_routes",
]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "src.database",
]
disable_error_code = ["arg-type", "misc", "import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end user journey tests",
    "nfr: non-functional tests (performance, security, concurrency)",
]
